--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                     <ul>
                         <li><a href="#">inicio</a></li>
                         <li><a href="#">Sobre</a></li> <!--Link-->
+                        Meu nome é Sofia, atualmente tenho 15 anos, sou uma garota de cabelos escuros é uso óculos e tenho por volta de 1,60 de altura. Moro na cidade de Salto-SP e estudo no Instituto Federal, gosto de história e língua portuguesa, sou péssima em qualquer coisa na área de exatas. 
+
+   Eu gosto de cinema, jogos e animais, principalmente os cachorros, gosto de ir a parques andar de bicicleta e tomar sorvete em seguida, me sinto livre confesso. Posso dizer que não sou uma pessoa tão organizada, mas eu tento, sou bem-humorada, mas como todos as vezes fico de mau humor. 
+
+  Não sou uma pessoa muito esportiva, mas recentemente comecei a jogar vôlei na escola no tempo vago, sou evangélica e vou a igreja desde que nasci, um episódio significativo da minha vida foi um dia que fui ao um sítio com meus amigos na formatura do 5° ano, nadamos em um riacho, fizemos trilha, e andamos de tirolesa, confesso que fiquei nostálgica depois dessa, para o meu futuro eu não sei bem qual faculdade quero fazer, mas quero conhecer novos lugares, culturas e pessoas, espero que tenha conhecido um pouco de mim!. 
                         <li><a href="#">Portfólio</a></li>
                         <li><a href="#">Contato</a></li>
                     </ul>
