--- a/sobre.html
+++ b/sobre.html
@@ -19,6 +19,7 @@
       <article class="itens-container">
         <div class="txt-itens"
           <h3><center>Sobre mim</center></div>
+           < font face=  sans-serif >
           <br>
           <center><p>Meu nome é Sofia, Nasci em  Indaiatuba em 2009 e atualmente tenho 15 anos, sou uma garota de cabelos escuros é uso óculos e tenho por volta de 1,60 de altura. Moro na cidade de Salto-SP e estudo no Instituto Federal, gosto de história e língua portuguesa, sou péssima em qualquer coisa na área de exatas. 
 Eu amo de cinema, musica, jogos e animais, principalmente os cachorros, gosto de ir a parques andar de bicicleta e amo nadar, me sinto livre confesso. Posso dizer que não sou uma pessoa tão organizada, mas eu tento. Não sou uma pessoa muito esportiva, mas recentemente comecei a jogar vôlei na escola no tempo vago e pra ser sincera e bem legal, sou evangélica e vou a igreja desde que nasci, um episódio significativo da minha vida foi um dia que fui ao um sítio com meus amigos na formatura do 5° ano, nadamos em um riacho, fizemos trilha, e andamos de tirolesa, 
