--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
     <div class="inter-face">
       <article class="itens-container">
         <div class="txt-itens"
-            <font face="Arial"> Arial </font> <br />
+            <font face="sans-serif"> </font> <br />
             <h3><center>Sobre mim</center></div>
           <br>
           <center><p>Meu nome é Sofia, Nasci em  Indaiatuba em 2009 e atualmente tenho 15 anos, sou uma garota de cabelos escuros é uso óculos e tenho por volta de 1,60 de altura. Moro na cidade de Salto-SP e estudo no Instituto Federal, gosto de história e língua portuguesa, sou péssima em qualquer coisa na área de exatas. 
