--- a/contato.html
+++ b/contato.html
@@ -1,4 +1,19 @@
-<!-- Mais de uma opção: -->
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Contato</title>
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- /Google fonts -->
+</head>
+ <body> 
+ <!-- Mais de uma opção: -->
 <input type="checkbox"name="Tipo de contato"valor="1">Email:
 <input type="checkbox"name="Tipo de contato"valor="2">WhatsApp:
 <input type="checkbox"name="Tipo de contato"valor="3">Instagram: 
@@ -39,3 +54,7 @@ Selecione o seu Estado:
 </form>
 <ladel for='senha'>Senh</label>
 <input type ='password' name='Senha'<
+
+ </body>
+  </html>
+
