--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li><a href="#">inicio</a></li>
                         <li><a href="sobre.html">Sobre</a></li> <!--Link-->
                         <li><a href="#">Portfólio</a></li>
-                        <li><a href="contato.html"></a></li>
+                        <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
             </section>
