--- a/contato.html
+++ b/contato.html
@@ -52,7 +52,7 @@ Selecione o seu Estado:
 <!-- Text área -->
  <textarea rows=5 ></textarea>
 </form>
-<ladel for='senha'>Senh</label>
+<ladel for='senha'>Senha</label>
 <input type ='password' name='Senha'<
 
  </body>
