--- a/contato.html
+++ b/contato.html
@@ -46,7 +46,8 @@ Selecione o seu Estado:
 <option value="'SP">São Paulo</option>
 <option value="'RJ">Rio de Janeiro</option>
 <option value="'MG">Minas Gerais</option>
-<th><img src="i.png" widht="1000" height="500"></th>
+<option value="'SC">Santa catarina</option>
+<th><img src="i.png" widht="100" height="500"></th>
 <input type="submit" name="'Enviar"></body><br> 
 <!-- <button type="submit" name="'Enviar">Enviar</button> -->
 <!-- Text área -->
