--- a/contato.html
+++ b/contato.html
@@ -14,10 +14,6 @@
 </head>
  <body> 
  <!-- Mais de uma opção: -->
-<input type="checkbox"name="Tipo de contato"valor="1">Email:
-<input type="checkbox"name="Tipo de contato"valor="2">WhatsApp:
-<input type="checkbox"name="Tipo de contato"valor="3">Instagram: 
-<!-- Início do botão  + d uma opção-->
 <input type='radio'name='compras'valor='.'>Email: 
 <input type='radio'name='compras'valor='.'>Instagram: 
  <input type='radio'name='compras'valor='.'>WhatsApp: 
@@ -46,7 +42,7 @@ Selecione o seu Estado:
 <option value="'SP">São Paulo</option>
 <option value="'RJ">Rio de Janeiro</option>
 <option value="'MG">Minas Gerais</option>
-<option value="'SC">Santa catarina</option>
+<option value="'SC">Santa Catarina</option>
 <th><img src="i.png" widht="100" height="500"></th>
 <input type="submit" name="'Enviar"></body><br> 
 <!-- <button type="submit" name="'Enviar">Enviar</button> -->
