--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
             font-size: 20px; /* Tamanho padrão da fonte */
         }
         h1 {
-            font-size: 24px; /* Tamanho do título */
+            font-size: 30px; /* Tamanho do título */
         }
         img {
             width: 50px; /* Tamanho da imagem */
@@ -41,7 +41,7 @@
 
         <!-- Senha -->
         <label for='senha'>Senha:</label>
-        <input type='password' name='senha' value='.'><br>
+        <input type='password' name='senha' value=''><br>
 
         <!-- Data de nascimento -->
         <label for='data'>Data de nascimento:</label>
