--- a/contato.html
+++ b/contato.html
@@ -37,7 +37,7 @@
 
         <!-- Nome -->
         <label for='nome'>Primeiro nome:</label>
-        <input type='text' name='nome' value='.'><br>
+        <input type='text' name='nome' value=''><br>
 
         <!-- Senha -->
         <label for='senha'>Senha:</label>
