--- a/contato.html
+++ b/contato.html
@@ -69,7 +69,7 @@
         <br>
         <a href="https://www.instagram.com/r.sofiz/profilecard/?igsh=d2tncGJ2NWZxeDJ2">
         <div class="insta">
-        <img src="insta.jpg" width="100px">
+        <img src="Insta.jpg" width="100px">
     </form>
 </body>
 
