--- a/contato.html
+++ b/contato.html
@@ -71,6 +71,10 @@
         <a href="https://www.instagram.com/r.sofiz/profilecard/?igsh=d2tncGJ2NWZxeDJ2">
         <div class="insta">
         <img src="Insta.jpg" width="100px">
+         <br>
+        <a href="https://www.tiktok.com/@sof1_jk?_t=8qqWlRkK8cH&_r=1">
+        <div class="tiktok">
+        <img src=".jpg" width="100px">
     </form>
 </body>
 
