--- a/contato.html
+++ b/contato.html
@@ -74,7 +74,7 @@
          <br>
         <a href="https://www.tiktok.com/@sof1_jk?_t=8qqWlRkK8cH&_r=1">
         <div class="tiktok">
-        <img src=".jpg" width="100px">
+        <img src="Tok.jpg" width="100px">
     </form>
 </body>
 
