--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header> <!--cabeçalho-->
         <div class="interface">
             <section class="logo">
-                <img src="megumi.jpg" alt="logotipo do site"> 
+                <img src="megumi.png" alt="logotipo do site"> 
             </section> 
 
             <section class="menu-desktop">
