--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                         <li><a href="sobre.html">Sobre</a></li> <!--Link-->
                         <li><a href="#">Portfólio</a></li>
                         <li><a href="contato.html">Contato</a></li>
+                        <li><a href="tutorial.html">Contato</a></li>
+                        
                     </ul>
                 </nav>
             </section>
