--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li><a href="sobre.html">Sobre</a></li> <!--Link-->
                         <li><a href="#">Portfólio</a></li>
                         <li><a href="contato.html">Contato</a></li>
-                        <li><a href="tutorial.html">Contato</a></li>
+                        <li><a href="tutorial.html">tutorial</a></li>
                         
                     </ul>
                 </nav>
