--- a/tutorial.html
+++ b/tutorial.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>tutorial</title>
     <!-- Google fonts -->
-    <link rel="preconnect" href="">
+    <link rel="preconnect" href="tutorial.html.mp4">
     <link rel="preconnect" href="" crossorigin>
     <link href="">
     <!-- /Google fonts -->
