--- a/tutorial.html
+++ b/tutorial.html
@@ -8,7 +8,7 @@
     <title>tutorial</title>
     <!-- Google fonts -->
     <link rel="preconnect" href="tutorial.html.mp4">
-    <link rel="preconnect" href="" crossorigin>
+    <link rel="preconnect" href="tutorial.html.mp4" crossorigin>
     <link href="">
     <!-- /Google fonts -->
 </head>
