--- a/tutorial.html
+++ b/tutorial.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>tutorial</title>
-    <!-- Google fonts -->
-    <link rel="preconnect" href="tutorial.html.mp4">
-    <link rel="preconnect" href="tutorial.html.mp4" crossorigin>
-    <link href="">
-    <!-- /Google fonts -->
+    <title>Meu Projeto - Vídeo</title>
 </head>
+<body>
+    <h1>Meu Projeto</h1>
+    <p>Veja o vídeo abaixo!</p>
+    <iframe width="560" height="315" src="tutorial.html.mp4" frameborder="0" allowfullscreen></iframe>
+</body>
+</html>
+
