--- a/tutorial.html
+++ b/tutorial.html
@@ -15,3 +15,4 @@
         <div class="txt-itens"
             <font face="sans-serif"> </font> <br />
             <h3><center>tutorial</center></div>
+            <center><p> tutorial link: https://www.capcut.com/view/7442699856260776503?workspaceId=7442330238534582328
