--- a/tutorial.html
+++ b/tutorial.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>tutorial</title>
+    <title>Portifólio</title>
 </head>
-
 <body>
-  <section class="tutorial">
-    <div class="inter-face">
-      <article class="itens-container">
-        <div class="txt-itens"
-            <font face="sans-serif"> </font> <br />
-            <h3><center>tutorial</center></div>
-            <center><p> tutorial link: https://www.capcut.com/view/7442699856260776503?workspaceId=7442330238534582328 </p></center>
+    <header> 
+        <p align="center">
+            <i><span style="font-size: 50px; font-family: 'Felix Titling'; color: black;">
+                PORTFÓLIO
+            </span></i>
+            <p align="center">
+                <i><span style="font-size: 25px; font-family: 'Didot'; color: black;">
+                    <p ALIGN=Center><a href="WhatsApp Video 2024-11-28 at 18.51.11.mp4"> Vídeo Tutorial esmaltacaão holográfica</a></p>
+                    <p ALIGN=Center><a href="https://www.capcut.com/view/7442699856260776503?workspaceId=7442330238534582328…
