--- a/tutorial.html
+++ b/tutorial.html
@@ -15,4 +15,5 @@
             <p align="center">
                 <i><span style="font-size: 25px; font-family: 'Didot'; color: black;">
                     <p ALIGN=Center><a href="WhatsApp Video 2024-11-28 at 18.51.11.mp4"> Vídeo Tutorial esmaltacão holográfica</a></p>
-                    <p ALIGN=Center><a href="https://www.capcut.com/view/7442699856260776503?workspaceId=7442330238534582328"
+                    <p ALIGN=Center><a href="tutorialcweb.mp4"
+"
