--- a/tutorial.html
+++ b/tutorial.html
@@ -10,10 +10,8 @@
     <header> 
         <p align="center">
             <i><span style="font-size: 50px; font-family: 'Felix Titling'; color: black;">
-                Tutorial
+                Tutorial esmaltacão holográfica
             </span></i>
             <p align="center">
                 <i><span style="font-size: 25px; font-family: 'Didot'; color: black;">
-                    <p ALIGN=Center><a href="WhatsApp Video 2024-11-28 at 18.51.11.mp4"> Vídeo Tutorial esmaltacão holográfica</a></p>
-                    <p ALIGN=Center><a href="tutorialcweb.mp4"
-                                        <center><p> link caso não abra: https://www.capcut.com/view/7442699856260776503?workspaceId=7442330238534582328 </p></center>
+                   <center><p>https://www.capcut.com/view/7442699856260776503?workspaceId=7442330238534582328 </p></center>
