--- a/tutorial.html
+++ b/tutorial.html
@@ -10,8 +10,9 @@
     <header> 
         <p align="center">
             <i><span style="font-size: 50px; font-family: 'Felix Titling'; color: black;">
-                Tutorial esmaltacão holográfica
+                Tutorial
             </span></i>
             <p align="center">
                 <i><span style="font-size: 25px; font-family: 'Didot'; color: black;">
-                   <center><p>https://www.capcut.com/view/7442699856260776503?workspaceId=7442330238534582328 </p></center>
+                    <p ALIGN=Center><a href="link caso não abra: https://www.capcut.com/view/7442699856260776503?workspaceId=7442330238534582328"> Vídeo Tutorial esmaltacão holográfica</a></p>
+                    <p ALIGN=Center><a href="link caso não abra: https://www.capcut.com/view/7442699856260776503?workspaceId=7442330238534582328"
